terraform/security.tf
resource "aws_security_group" "allow_ssh" {
  name_prefix = "allow_ssh"
  
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
